--- a/gui/super_admin/super_admin.ui
+++ b/gui/super_admin/super_admin.ui
@@ -157,13 +157,13 @@
      <string>온도 :</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
+   <widget class="QLabel" name="cmd_vel">
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>200</y>
-      <width>67</width>
-      <height>21</height>
+      <y>190</y>
+      <width>271</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -172,7 +172,7 @@
      </font>
     </property>
     <property name="text">
-     <string>속도 :</string>
+     <string>이동 속도 :</string>
     </property>
    </widget>
    <widget class="QLabel" name="ssid">
@@ -633,6 +633,42 @@
     </property>
     <property name="text">
      <string>긴급 상태  :</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="cmd_vel_nav">
+    <property name="geometry">
+     <rect>
+      <x>1390</x>
+      <y>460</y>
+      <width>361</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>요청 속도 :</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="cmd_vel_2">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>230</y>
+      <width>271</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>AMCL 알고리즘 단계 : </string>
     </property>
    </widget>
   </widget>
