--- a/gui/super_admin/super_admin.ui
+++ b/gui/super_admin/super_admin.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>137</y>
+      <y>640</y>
       <width>92</width>
       <height>23</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>137</y>
+      <y>590</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>317</y>
+      <y>810</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>177</y>
+      <y>650</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>1640</x>
-      <y>177</y>
+      <y>650</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>1530</x>
-      <y>17</y>
+      <x>1540</x>
+      <y>420</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -125,7 +125,7 @@
     <property name="geometry">
      <rect>
       <x>1640</x>
-      <y>257</y>
+      <y>750</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -138,7 +138,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>257</y>
+      <y>750</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -151,7 +151,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>227</y>
+      <y>700</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -164,7 +164,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>77</y>
+      <y>530</y>
       <width>371</width>
       <height>31</height>
      </rect>
@@ -330,7 +330,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>177</y>
+      <y>710</y>
       <width>112</width>
       <height>23</height>
      </rect>
@@ -349,7 +349,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>217</y>
+      <y>780</y>
       <width>112</width>
       <height>23</height>
      </rect>
@@ -457,9 +457,9 @@
     <property name="geometry">
      <rect>
       <x>1330</x>
-      <y>77</y>
+      <y>490</y>
       <width>551</width>
-      <height>331</height>
+      <height>451</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -692,8 +692,8 @@
     <widget class="QLabel" name="odom_2">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>10</y>
+       <x>0</x>
+       <y>0</y>
        <width>71</width>
        <height>31</height>
       </rect>
@@ -882,10 +882,10 @@
    <widget class="QFrame" name="motor_frame">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>290</y>
+      <x>1220</x>
+      <y>70</y>
       <width>261</width>
-      <height>211</height>
+      <height>201</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -1090,28 +1090,231 @@
      <enum>QFrame::Raised</enum>
     </property>
    </widget>
-   <widget class="QWidget" name="map_widget" native="true">
+   <widget class="QFrame" name="tf_frame">
     <property name="geometry">
      <rect>
-      <x>1460</x>
-      <y>620</y>
-      <width>271</width>
-      <height>281</height>
+      <x>890</x>
+      <y>290</y>
+      <width>351</width>
+      <height>211</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="show_heatmap_btn">
-    <property name="geometry">
-     <rect>
-      <x>1520</x>
-      <y>940</y>
-      <width>151</width>
-      <height>25</height>
-     </rect>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
     </property>
-    <property name="text">
-     <string>Show heat map</string>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
     </property>
+    <widget class="QLabel" name="tf_pos_x">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="map">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="map_1">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>40</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Position</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="map_2">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>110</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Orientation</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_pos_y">
+     <property name="geometry">
+      <rect>
+       <x>92</x>
+       <y>70</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_pos_z">
+     <property name="geometry">
+      <rect>
+       <x>175</x>
+       <y>70</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_ori_x">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>140</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_ori_y">
+     <property name="geometry">
+      <rect>
+       <x>92</x>
+       <y>140</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_ori_z">
+     <property name="geometry">
+      <rect>
+       <x>175</x>
+       <y>140</y>
+       <width>61</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tf_ori_w">
+     <property name="geometry">
+      <rect>
+       <x>260</x>
+       <y>140</y>
+       <width>71</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>map</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </widget>
    <zorder>camera_frame_3</zorder>
    <zorder>camera_frame_2</zorder>
@@ -1149,8 +1352,7 @@
    <zorder>cmd_vel_z_frame</zorder>
    <zorder>odom_frame</zorder>
    <zorder>motor_frame</zorder>
-   <zorder>map_widget</zorder>
-   <zorder>show_heatmap_btn</zorder>
+   <zorder>tf_frame</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
